// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListView component component render tests snapshots snapshot: error 1`] = `
<Container
  className="py-4"
>
  <ListViewBreadcrumb />
  <ListError />
  <ReviewModal />
</Container>
`;

exports[`ListView component component render tests snapshots snapshot: loaded 1`] = `
<Container
  className="py-4"
>
  <ListViewBreadcrumb />
  <SubmissionsTable />
  <ReviewModal />
</Container>
`;

exports[`ListView component component render tests snapshots snapshot: loading 1`] = `
<Container
  className="py-4"
>
  <ListViewBreadcrumb />
  <div
    className="w-100 h-100 text-center"
  >
    <Spinner
      animation="border"
      variant="primary"
    />
    <h4>
      <FormattedMessage
        defaultMessage="Loading responses"
        description="loading text for submission response list"
        id="ora-grading.ListView.loadingResponses"
      />
    </h4>
  </div>
  <ReviewModal />
</Container>
`;
